# Smart-Kit

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/admin/: history.py  user.py
app/auth/: dependencies.py  exceptions.py  jwt.py  schemas.py
app/config/: database.py  settings.py
app/dependencies/: repository.py  services.py  use_cases.py
app/infrastructure/: http_client.py  redis.py
app/models/: history.py  user.py
app/repository/: base.py  history.py  user.py
app/routers/: history.py  request.py  response.py  user.py
app/schemas/: hisory.py  history.py  user.py  validators.py
app/services/: auth.py  base.py  cache_service.py  history.py  request.py  third_party.py  user.py
app/use_cases/: check_server.py  get_history.py  get_response.py  login_user.py  process_request.py  register_user.py
migrations/: env.py
migrations/versions/: 4c3c452db0a0_initial_setup.py  76b879d60be2_implementing_user_model.py
tests/: conftest.py  test_history.py  test_user.py
thirdparty_server/: .dockerignore  Dockerfile  dependencies.py  main.py  routers.py  schemas.py  services.py  use_cases.py
